Fix ngSelect Alignments
Manually set spacing for icons for only the non-outlined version

--- a/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.scss
+++ b/alcs-frontend/src/app/features/home/audit/audit-subtasks.component.scss
@@ -56,6 +56,6 @@
 
 :host::ng-deep .ng-select .ng-select-container {
   .ng-value-container .ng-input > input {
-    margin: 0;
+    margin-bottom: 8px;
   }
 }
